--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/buns-li/bcore-jwt.git"
+        "url": "git+https://github.com/buns-li/bcore.jwt.git"
     },
     "keywords": [
         "jwt",
@@ -23,9 +23,9 @@
     },
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/buns-li/bcore-jwt/issues"
+        "url": "https://github.com/buns-li/bcore.jwt/issues"
     },
-    "homepage": "https://github.com/buns-li/bcore-jwt#readme",
+    "homepage": "https://github.com/buns-li/bcore.jwt#readme",
     "devDependencies": {
         "mocha": "^3.4.2",
         "should": "^11.2.1"
